--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,25 +33,18 @@ jobs:
           set -euo pipefail
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
-          ssh-keyscan -p "${DEPLOY_PORT:-22}" -H "${DEPLOY_HOST}" >> ~/.ssh/known_hosts
+          ssh-keyscan -p $DEPLOY_PORT $DEPLOY_HOST >> ~/.ssh/known_hosts
 
       - name: Ensure remote path exists
         shell: bash
         run: |
           set -euo pipefail
-          ssh -o IdentitiesOnly=yes -o StrictHostKeyChecking=yes -p "${DEPLOY_PORT:-22}" "${DEPLOY_USER}@${DEPLOY_HOST}" "mkdir -p '${DEPLOY_PATH}'"
+          ssh -p $DEPLOY_PORT $DEPLOY_USER@$DEPLOY_HOST "mkdir -p $DEPLOY_PATH"
 
       - name: Sync files
         shell: bash
         run: |
           set -euo pipefail
-          rsync -az --delete \
-            --exclude ".git/" \
-            --exclude ".github/" \
-            --exclude ".claude/" \
-            --exclude ".trae/" \
-            --exclude "docs/" \
-            --exclude "CLAUDE.md" \
-            --exclude "devserver.py" \
-            -e "ssh -o IdentitiesOnly=yes -o StrictHostKeyChecking=yes -p ${DEPLOY_PORT:-22}" \
-            ./ "${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_PATH}/"
+          rsync -azv --delete \
+            -e "ssh -o IdentitiesOnly=yes -o StrictHostKeyChecking=yes -p $DEPLOY_PORT" \
+            ./ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH/"
