ci: 简化 SSH 部署命令选项
移除 rsync 命令中不必要的 StrictHostKeyChecking 和 IdentitiesOnly 选项，
以简化部署步骤并避免潜在的连接问题。

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,5 +46,5 @@ jobs:
         run: |
           set -euo pipefail
           rsync -azv --delete \
-            -e "ssh -o IdentitiesOnly=yes -o StrictHostKeyChecking=yes -p $DEPLOY_PORT" \
+            -e "ssh -p $DEPLOY_PORT" \
             ./ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH/"
