ci(deploy): 排除非生产文件以优化部署同步
添加 rsync 排除规则，避免将开发环境文件（如.git、.github、文档、临时文件等）同步至生产服务器，减少部署体积并提升安全性。

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,5 +46,14 @@ jobs:
         run: |
           set -euo pipefail
           rsync -azv --delete \
+            --exclude ".git/" \
+            --exclude ".github/" \
+            --exclude ".claude/" \
+            --exclude ".trae/" \
+            --exclude "docs/" \
+            --exclude "*.md" \
+            --exclude ".gitignore" \
+            --exclude ".DS_Store" \
+            --exclude "Thumbs.db" \
             -e "ssh -p $DEPLOY_PORT" \
             ./ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH/"
