feat: 添加高校合作院校标志并实现滚动展示
- 新增多所合作大学的 logo 图片资源
- 将静态的“高校合作”列表重构为无限循环的滚动展示组件
- 优化视觉效果，添加悬停暂停和灰度滤镜过渡
- 更新部署配置，排除 .vscode 目录
- 简化 logo 的 alt 文本

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,5 +55,6 @@ jobs:
             --exclude ".gitignore" \
             --exclude ".DS_Store" \
             --exclude "Thumbs.db" \
+            --exclude ".vscode/" \
             -e "ssh -p $DEPLOY_PORT" \
             ./ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH/"
