--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.16.0
+          cache: npm
+
+      - name: Install dependencies
+        shell: bash
+        run: |
+          set -euo pipefail
+          npm ci
+
+      - name: Build
+        shell: bash
+        run: |
+          set -euo pipefail
+          npm run build
+
       - name: Setup SSH agent
         uses: webfactory/ssh-agent@v0.7.0
         with:
@@ -57,4 +75,4 @@ jobs:
             --exclude "Thumbs.db" \
             --exclude ".vscode/" \
             -e "ssh -p $DEPLOY_PORT" \
-            ./ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH/"
+            ./dist/ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH/"
