feat: 添加服务独立页面并改进预览脚本
为实习辅导、技能提升等六个服务创建独立的HTML页面，使用户可以直接访问特定服务详情
在head.html中修复CSS路径，确保在独立页面中样式正确加载
更新Vite配置以包含新页面作为构建入口，并添加预览脚本以支持美观URL预览
修改导航和英雄区域的链接，将浮动卡片改为可点击，引导用户至对应服务页

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "preview:pretty": "bash scripts/preview-pretty.sh"
   },
   "devDependencies": {
     "vite": "^6.0.0"
