ci(deploy): 确保部署时同步图片资源目录
在部署工作流中创建目标目录时，同时创建 assets/images 子目录。
调整文件同步步骤，将 assets/images 从主同步中排除，并新增一个独立的同步步骤专门处理图片资源，以避免覆盖或遗漏。

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,7 +57,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          ssh -p $DEPLOY_PORT $DEPLOY_USER@$DEPLOY_HOST "mkdir -p $DEPLOY_PATH"
+          ssh -p $DEPLOY_PORT $DEPLOY_USER@$DEPLOY_HOST "mkdir -p $DEPLOY_PATH $DEPLOY_PATH/assets/images"
 
       - name: Sync files
         shell: bash
@@ -74,5 +74,12 @@ jobs:
             --exclude ".DS_Store" \
             --exclude "Thumbs.db" \
             --exclude ".vscode/" \
+            --exclude "assets/images/" \
             -e "ssh -p $DEPLOY_PORT" \
             ./dist/ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH/"
+
+          rsync -azv --delete \
+            --exclude ".DS_Store" \
+            --exclude "Thumbs.db" \
+            -e "ssh -p $DEPLOY_PORT" \
+            ./public/assets/images/ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH/assets/images/"
